syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.annatarhe.athena.cells";
option java_outer_classname = "CellsProto";

package proto;

service Cells {
  rpc GetList (CellsRequest) returns (CellsReply) {}
}

message CellsRequest {
  int32 from = 1;
  int32 take = 2;
  int32 offset = 3;
}

message CellItem {
  int32 id = 1;
	string img = 2;
	string text = 3;
	int32 premission = 4;
	int32 cate = 5;
  string fromID = 6;
	string fromURL = 7;
	int64 createdAt = 8;
}

message CellsReply {
    repeated CellItem cells = 2; 
}